# toolboxcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/diag/: Log.h  Log.ipp
include/diag/logger/: LogUtils.hpp  Logger.hpp
include/log_facade/: Backend.hpp  Combinators.hpp  DefaultFmt.hpp  Facade.hpp  Log.hpp  Log.ipp
include/log_facade/logger/: Backend.hpp  Combinators.hpp  DefaultFmt.hpp  Logger.hpp  Sinks.hpp
include/log_facade/util/: FoldTuple.hpp
include/toolboxcpp/errors/: Errors.hpp
include/toolboxcpp/except/: Except.hpp  Except.ipp
include/toolboxcpp/log/: Combinators.hpp  DefaultFmt.hpp  Log.hpp  Logger.hpp  Sinks.hpp
include/toolboxcpp/util/: FoldTuple.hpp  FuncRef.hpp  Resource.hpp  SourceLocation.hpp
include/util/: FoldTuple.h  FoldTuple.hpp  FuncRef.h  FuncRef.hpp  SourceLocation.hpp
src/: LogFacade.cpp  Logger.cpp  unittest.cpp
src/log/: Logger.cpp
test/: Log.cpp
